Bug 109445. Allow imagemap references by id in text/html. r=jst